--- a/第十二章/10Conditional EuclideanClustering/source/CMakeLists.txt
+++ b/第十二章/10Conditional EuclideanClustering/source/CMakeLists.txt
@@ -7,6 +7,8 @@ find_package(PCL 1.7 REQUIRED)
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
+add_definitions(-DPCL_NO_PRECOMPILE)
+add_definitions(/bigobj)
 
 add_executable (conditional_euclidean_clustering conditional_euclidean_clustering.cpp)
 target_link_libraries (conditional_euclidean_clustering ${PCL_LIBRARIES})
